--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  
+}
+
+.box {
+  display: inline-block;
+
+  margin-left: 10px;
+
+  width: 200px;
+  height: 200px;
+
+  border: 1px solid black;
+}
+
+.button--container {
+  display: grid;
+  grid-template-columns: 250px 250px;
+  grid-gap: 10px;
+
+  margin-top: 10px;
+
+  justify-content: center;
+}
+
+.button--container > button {
+  padding: 8px;
+}
